Bug 267550 - [WGSL] shader,execution,expression,call,builtin,atomics,atomicExchange:* is failing
Summary: [WGSL] shader,execution,expression,call,builtin,atomics,atomicExchange:* is f...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-15 10:00 PST by Tadeu Zagallo
Modified: 2024-01-16 05:10 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2024-01-15 10:00:40 PST
...
Comment 1 Radar WebKit Bug Importer 2024-01-15 10:00:56 PST
<rdar://problem/121011079>
Comment 2 Tadeu Zagallo 2024-01-15 10:03:12 PST
Pull request: https://github.com/WebKit/WebKit/pull/22793
Comment 3 EWS 2024-01-16 05:10:46 PST
Committed 273065@main (e1188ea0c298): <https://commits.webkit.org/273065@main>

Reviewed commits have been landed. Closing PR #22793 and removing active labels.