[WGSL] shader,execution,expression,call,builtin,atomics,atomicExchange:* is failing https://bugs.webkit.org/show_bug.cgi?id=267550 rdar://121011079

Reviewed by Mike Wyrzykowski.

Threadgroup atomics need to be explicitly set to zero in the first invocation of
the threadgroup.

* Source/WebGPU/WGSL/AST/ASTParameter.h:
* Source/WebGPU/WGSL/EntryPointRewriter.cpp:
(WGSL::EntryPointRewriter::visit):
(WGSL::EntryPointRewriter::appendBuiltins):
* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::insertMaterializations):
(WGSL::RewriteGlobalVariables::insertLocalDefinitions):
(WGSL::RewriteGlobalVariables::initializeAtomics):
(WGSL::RewriteGlobalVariables::insertWorkgroupBarrier):
(WGSL::RewriteGlobalVariables::findOrInsertLocalInvocationIndex):
(WGSL::RewriteGlobalVariables::atomicStoreInitialValue):

Canonical link: https://commits.webkit.org/273065@main